--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -39,7 +39,11 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+}
+
+.delete-item-form {
+    display: flex;
+    align-self: center;
 }
 
 .cart-button-delete {
@@ -91,8 +95,7 @@ main {
     font-family: "Unbounded", "Arial";
     font-size: clamp(0.4rem, 1vw, 1.8rem);
     cursor: pointer;
-    box-shadow: 0.1vw 0.1vw 0.5vw rgba(0, 0, 0, 0.3),
-        inset -0.5vw -0.5vw 0.5vw rgba(200, 200, 200, 0.2);
+    box-shadow: 0 0 0.5vw rgba(0, 0, 0, 0.3);
 }
 
 .cart-item-quantity button:hover {
