--- a/static/css/login.css
+++ b/static/css/login.css
@@ -13,10 +13,9 @@ footer {
 article {
     background-color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    row-gap: 5vw;
     height: 35vw;
     width: 25vw;
     border-radius: 3vw;
@@ -26,12 +25,11 @@ article {
 article h1 {
     margin: 0;
     font-family: "Rubik Glitch", "Arial";
-    font-size: 2vw;
+    font-size: clamp(0rem, 2vw , 1000rem);
 }
 
 article form {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     row-gap: 1vw;
@@ -44,7 +42,7 @@ article form button{
     border-radius: 1vw;
     background-color: white;
     box-shadow: inset 0.15vw 0.15vw 0.45vw rgba(0, 0, 0, 0.4);
-    font-size: 1.3vw;
+    font-size: clamp(0rem, 1vw, 1000rem);
     font-family: "Unbounded", "Arial";
     max-width: 15vw;
 }
@@ -58,6 +56,7 @@ article form button {
     border-radius: 2vw;
     cursor: pointer;
     transition: all 0.2s;
+    font-size: clamp(0rem, 1.3vw, 1000rem);
 }
 
 article form button:hover {
@@ -68,19 +67,28 @@ article form button:active {
     transform: scale(95%);
 }
 
-article form h2 {
+.error-list {
     margin: 0;
     padding: 0;
     max-width: 20vw;
     max-height: 2.5vw;
-    font-size: 0.8vw;
+    font-size: clamp(0rem, 0.8vw, 1000rem);
     color: crimson;
+    ul {
+        padding: 0;
+        margin: 0;
+    }
+}
+
+article div {
+    display: flex;
+    column-gap: 0.7vw;
 }
 
 article div a,
 article div span{
     margin: 0;
-    font-size: 1.1vw;
+    font-size: clamp(0rem, 1.1vw, 1000rem);
     font-style: italic;
     text-decoration: none;
 }
