--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -1,47 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/static/css/general.css">
-    <link rel="stylesheet" href="/static/css/cart.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-    <title>Корзина</title>
-</head>
-<body>
-    <header>
-        <div class="header-img">
-            <img src="/media/media/images/top_wave.svg" alt="">
-        </div>
-        <div class="header-logo">
-            <a href="/">
-                © BULL'S SHOP
-            </a>
-        </div>
+{% extends 'index.html' %}
 
-        <div class="profile">
-            {% if request.user.is_authenticated %}
-                <a class="profile-a" href="{% url 'shop:profile' %}">
-                  <img src="/media/media/images/profile.png">
-                  <p class="profile-username">{{ user.username }}</p>
-                </a>
-            {% else %}
-                <a class="profile-login" href="{% url 'login' %}">Log In</a>
-                <a class="profile-register" href="{% url 'shop:register' %}">Sign Up</a>
-            {% endif %}
-        </div>
+{% block links %}
+  <link rel="stylesheet" href="/static/css/cart.css">
+{% endblock %}
 
-        <div class="cart-icon">
-            <a href=""><button class="cart-button">
-                <img src="/media/media/images/shop-icon.svg" alt="">
-            </button></a>
-        </div>
-    </header>
+{% block title %}
+  Корзина
+{% endblock %}
 
-    <main>
-        {% if cart_items %}
+{% block main %}
+  {% if cart_items %}
             <div class="cart-grid">
                 {% for item in cart_items %}
                     <div class="cart-item">
@@ -93,17 +61,4 @@
                 </div>
             </div>
         {% endif %}
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-title">© BULL'S SHOP 2025</div>
-            <nav>
-                <a href="">Контакты</a>
-                <a href="">Copyright</a>
-                <a href="">Политика конфиденциальности</a>
-            </nav>
-        </div>
-    </footer>
-</body>
-</html>
+{% endblock %}
