--- a/templates/item.html
+++ b/templates/item.html
@@ -1,80 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/static/css/general.css">
-    <link rel="stylesheet" href="/static/css/item.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-    <title>Item</title>
-</head>
-<body>
-    <header>
-        <div class="header-img">
-            <img src="/media/media/images/top_wave.svg" alt="">
-        </div>
-        <div class="header-logo">
-            <a href="/">
-                © BULL'S SHOP
-            </a>
-        </div>
+{% extends 'index.html' %}
 
-        <div class="profile">
-            {% if request.user.is_authenticated %}
-                <a class="profile-a" href="{% url 'shop:profile' %}">
-                  <img src="/media/media/images/profile.png">
-                  <p class="profile-username">{{ user.username }}</p>
-                </a>
-            {% else %}
-                <a class="profile-login" href="{% url 'login' %}">Log In</a>
-                <a class="profile-register" href="{% url 'shop:register' %}">Sign Up</a>
-            {% endif %}
-        </div>
+{% block links %}
+  <link rel="stylesheet" href="/static/css/item.css">
+{% endblock %}
 
-        <div class="cart-icon">
-            <a href="/cart"><button class="cart-button">
-                <img src="/media/media/images/shop-icon.svg" alt="">
-            </button></a>
-        </div>
-    </header>
+{% block title %}
+  Товар
+{% endblock %}
 
-    <main>
-        <div class="item">
-            <div class="item-img">
-                <img src="{{ item.image.url }}" alt="">
+{% block main %}
+  <div class="item">
+        <div class="item-img">
+            <img src="{{ item.image.url }}" alt="">
+        </div>
+        <div class="item-info">
+            <div>
+                <h1>{{ item.name }}</h1>
+                <h2>{{ item.price }} ₽</h2>
             </div>
-            <div class="item-info">
-                <div>
-                    <h1>{{ item.name }}</h1>
-                    <h2>{{ item.price }} ₽</h2>
-                </div>
-                <div>
-                    <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
-                        {% csrf_token  %}
-                        <button type="submit">buy</button>
-                    </form>
-                </div>
+            <div>
+                <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
+                    {% csrf_token  %}
+                    <button type="submit">buy</button>
+                </form>
             </div>
         </div>
-        <div class="item-desc">
-            <h1>Описание</h1>
-            <p>
-                {{ item.description }} Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad alias aliquid consectetur dicta dolorum ducimus earum expedita facere harum id ipsa, itaque labore minus molestias mollitia necessitatibus nisi nostrum numquam porro possimus sed sunt temporibus tenetur voluptates? Dicta eius eos expedita fugiat magni perferendis perspiciatis reprehenderit tempore! Dicta, maxime!
-            </p>
-        </div>
-    </main>
-
-    <footer>
-        < class="footer-content">
-            <div class="footer-title">© BULL'S SHOP 2025</div>
-            <nav>
-                <a href="contacts/">Контакты</a>
-                <a href="">Copyright</a>
-                <a href="">Политика конфиденциальности</a>
-            </nav>
-        </div>
-    </footer>
-</body>
-</html>
+    </div>
+  <div class="item-desc">
+        <h1>Описание</h1>
+        <p>
+            {{ item.description }} Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad alias aliquid consectetur dicta dolorum ducimus earum expedita facere harum id ipsa, itaque labore minus molestias mollitia necessitatibus nisi nostrum numquam porro possimus sed sunt temporibus tenetur voluptates? Dicta eius eos expedita fugiat magni perferendis perspiciatis reprehenderit tempore! Dicta, maxime!
+        </p>
+    </div>
+{% endblock %}
