--- a/templates/search.html
+++ b/templates/search.html
@@ -1,125 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/static/css/general.css">
-    <link rel="stylesheet" href="/static/css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-    <title>Search {{ search_body }}</title>
-</head>
+{% extends 'index.html' %}
 
-<body>
-    <header>
-        <div class="header-img">
-            <img src="/media/media/images/top_wave.svg" alt="">
-        </div>
-        <div class="header-logo">
-            <a href="/">
-                © BULL'S SHOP
-            </a>
-        </div>
+{% block links %}
+  <link rel="stylesheet" href="/static/css/index.css">
+{% endblock %}
 
-        <div class="profile">
-            {% if request.user.is_authenticated %}
-                <a class="profile-a" href="{% url 'shop:profile' %}">
-                  <img src="/media/media/images/profile.png">
-                  <p class="profile-username">{{ user.username }}</p>
-                </a>
-            {% else %}
-                <a class="profile-login" href="{% url 'login' %}">Log In</a>
-                <a class="profile-register" href="{% url 'shop:register' %}">Sign Up</a>
-            {% endif %}
-        </div>
+{% block title %}
+  Search {{ search_body }}
+{% endblock %}
 
-        <div class="cart-icon">
-            <a href="/cart"><button class="cart-button">
-                <img src="/media/media/images/shop-icon.svg" alt="">
-            </button></a>
-        </div>
-    </header>
-
-    <main>
-      <div class="search">
-        <div class="sort">
-          <div class="sort-drop-button">
-            <img class="sort-arrows" src="/media/media/images/sort_arrows.png">
-            <p class="radio-p">По умолчанию</p>
-            <img class="bottom-arrow" src="/media/media/images/arrow-to-bottom.png">
-          </div>
-          <div class="sort-drop-menu">
-            <div class="sort-drop-row">
-              <input id="radio0" type="radio" name="sort" checked>
-              <label for="radio0">По умолчанию</label>
-            </div>
-            <div class="sort-drop-row">
-              <input id="radio1" type="radio" name="sort">
-              <label for="radio1">По возрастанию цены</label>
-            </div>
-            <div class="sort-drop-row">
-              <input id="radio2" type="radio" name="sort">
-              <label for="radio2">По убыванию цены</label>
-            </div>
-          </div>
-        </div>
-
-        <form method="get" action="{% url 'shop:search' %}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="search-button" type="submit">
-                <img src="/media/media/images/search.svg" alt="">
-            </button>
-        </form>
-        <div class="search-tips"></div>
+{% block main %}
+  <div class="search">
+    <div class="sort">
+      <div class="sort-drop-button">
+        <img class="sort-arrows" src="/media/media/images/sort_arrows.png">
+        <p class="radio-p">По умолчанию</p>
+        <img class="bottom-arrow" src="/media/media/images/arrow-to-bottom.png">
       </div>
-      {% if search_results %}
-        <div class="item-grid">
-            {% for item in search_results %}
-                <div class="item" data-price="{{ item.price }}">
-                    <div class="item-img">
-                        <img src="{{ item.image.url }}" alt="">
-                    </div>
-                    <div class="item-info">
-                        <div>
-                            <h1>{{ item.name }}</h1>
-                            <h2>{{ item.price }}</h2>
-                        </div>
-                        <div>
-                            <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
-                                {% csrf_token  %}
-                                <button type="submit">buy</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
+      <div class="sort-drop-menu">
+        <div class="sort-drop-row">
+          <input id="radio0" type="radio" name="sort" checked>
+          <label for="radio0">По умолчанию</label>
         </div>
-        {% else %}
-            <div class="empty-cart">
-                <div class="empty-cart-info">
-                    <h1>Ничего не найдено по запросу</h1>
-                    <p>Попробуйте поискать по-другому или сократить запрос</p>
-                    <a href="/">
-                        Перейти на главную
-                    </a>
+        <div class="sort-drop-row">
+          <input id="radio1" type="radio" name="sort">
+          <label for="radio1">По возрастанию цены</label>
+        </div>
+        <div class="sort-drop-row">
+          <input id="radio2" type="radio" name="sort">
+          <label for="radio2">По убыванию цены</label>
+        </div>
+      </div>
+    </div>
+
+    <form method="get" action="{% url 'shop:search' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="search-button" type="submit">
+            <img src="/media/media/images/search.svg" alt="">
+        </button>
+    </form>
+    <div class="search-tips"></div>
+  </div>
+  {% if search_results %}
+    <div class="item-grid">
+        {% for item in search_results %}
+            <div class="item" data-price="{{ item.price }}">
+                <div class="item-img">
+                    <img src="{{ item.image.url }}" alt="">
+                </div>
+                <div class="item-info">
+                    <div>
+                        <h1>{{ item.name }}</h1>
+                        <h2>{{ item.price }}</h2>
+                    </div>
+                    <div>
+                        <form method="post" action="{% url 'shop:add_to_cart' item.id %}">
+                            {% csrf_token  %}
+                            <button type="submit">buy</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        {% endif %}
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-title">© BULL'S SHOP 2025</div>
-            <nav>
-                <a href="">Контакты</a>
-                <a href="">Copyright</a>
-                <a href="">Политика конфиденциальности</a>
-            </nav>
-        </div>
-    </footer>
-
-    <script src="/static/scripts/script.js"></script>
-</body>
-</html>
+        {% endfor %}
+    </div>
+  {% else %}
+      <div class="empty-cart">
+          <div class="empty-cart-info">
+              <h1>Ничего не найдено по запросу</h1>
+              <p>Попробуйте поискать по-другому или сократить запрос</p>
+              <a href="/">
+                  Перейти на главную
+              </a>
+          </div>
+      </div>
+  {% endif %}
+{% endblock %}
