--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Пароль успешно изменен!</title>
-</head>
-<body>
-<h1>Ваш пароль был успешно изменен!</h1>
-<a href="{% url 'shop:mainpage' %}">Главная</a>
-<a href="{% url 'shop:profile' %}">Профиль</a>
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block links %}
+  <link rel="stylesheet" href="/static/css/login-register.css">
+{% endblock %}
+
+{% block title %}
+  Пароль успешно изменен!
+{% endblock %}
+
+{% block main %}
+  <article style="height: 12vw; margin-bottom: 8vw; margin-top: 5vw;">
+    <h2>Смена пароля</h2>
+    <p>Ваш пароль был успешно изменен!</p>
+  </article>
+{% endblock %}
