--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,26 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Password Change</title>
-</head>
-<body>
-<h1>Смена пароля</h1>
-<form method="post">
-    {% csrf_token %}
-    <input type="password" name="old_password" placeholder="Старый пароль" required="">
-    {% if form.old_password.errors %}
-        {{ form.old_password.errors }}
-    {% endif %}
-    <input type="password" name="new_password1" placeholder="Новый пароль" required="">
-    {% if form.new_password1.errors %}
-        {{ form.new_password1.errors }}
-    {% endif %}
-    <input type="password" name="new_password2" placeholder="Подвердите новый пароль" required="">
-    {% if form.new_password2.errors %}
-        {{ form.new_password2.errors }}
-    {% endif %}
-    <input type="submit" value="Сменить пароль">
-</form>
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block links %}
+  <link rel="stylesheet" href="/static/css/login-register.css">
+{% endblock %}
+
+{% block title %}
+  Смена пароля
+{% endblock %}
+
+{% block main %}
+    <article>
+      <h2>Смена пароля</h2>
+      <form method="post">
+          {% csrf_token %}
+          <input type="password" name="old_password" placeholder="Старый пароль" required="">
+          {% if form.old_password.errors %}
+              {{ form.old_password.errors }}
+          {% endif %}
+          <input type="password" name="new_password1" placeholder="Новый пароль" required="">
+          {% if form.new_password1.errors %}
+              {{ form.new_password1.errors }}
+          {% endif %}
+          <input type="password" name="new_password2" placeholder="Подвердите новый пароль" required="">
+          {% if form.new_password2.errors %}
+              {{ form.new_password2.errors }}
+          {% endif %}
+          <input class="submit" type="submit" value="Сменить пароль">
+      </form>
+    </article>
+{% endblock %}
