--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Письмо отправлено</title>
-</head>
-<body>
-<h1>Сброс пароля</h1>
-<p>Мы отправили вам письмо с инструкцией по смене пароля!</p>
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block links %}
+  <link rel="stylesheet" href="/static/css/login-register.css">
+{% endblock %}
+
+{% block title %}
+  Письмо отправлено
+{% endblock %}
+
+{% block main %}
+  <article style="height: 12vw; margin-bottom: 8vw; margin-top: 5vw;">
+    <h2>Сброс пароля</h2>
+    <p>Мы отправили вам письмо с инструкцией по смене пароля!</p>
+</article>
+{% endblock %}
