--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Сброс пароля</title>
-</head>
-<body>
-<h1>Сброс пароля</h1>
-<p>введите адрес электронной почты и мы отправим вам письмо с инструкцией по смене пароля</p>
-<form method="post">
-    {% csrf_token %}
-    <input type="email" name="email" placeholder="введите адрес электронной почты">
-    {% if form.email.errors %}
-        {{ form.email.errors }}
-    {% endif %}
-    <input type="submit" value="Отправить">
-</form>
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block links %}
+  <link rel="stylesheet" href="/static/css/login-register.css">
+{% endblock %}
+
+{% block title %}
+  Сброс пароля
+{% endblock %}
+
+{% block main %}
+  <article style="height: 30vw">
+    <h2>Сброс пароля</h2>
+    <p>Введите адрес электронной почты и мы отправим вам письмо с инструкцией по смене пароля</p>
+    <form method="post">
+        {% csrf_token %}
+        <input type="email" name="email" placeholder="email">
+        {% if form.email.errors %}
+            {{ form.email.errors }}
+        {% endif %}
+        <input class="submit" type="submit" value="Отправить">
+    </form>
+</article>
+{% endblock %}
