--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -21,7 +21,7 @@
             <input class="agree-checkbox" type="checkbox" required="">
             <span class="agree-input">I Agree To The Terms & Conditions</span>
           </label>
-          <button>Sign up</button>
+          <button class="submit">Sign up</button>
           <div class="error-list">{{ form.errors }}</div>
       </form>
       <div class="bottom-form">
