--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -11,7 +11,7 @@ main {
 main h1 {
     color: white;
     font-weight: 800;
-    font-size: 3vw;
+    font-size: clamp(0rem, 2.5vw, 1000rem);
     margin: 0;
 }
 
@@ -24,16 +24,50 @@ article {
     width: 40vw;
     height: 20vw;
     border-radius: 2vw;
-    row-gap: 2vw;
+    row-gap: 3vw;
     box-shadow: inset -0.5vw -0.5vw 1vw rgba(0, 0, 0, 0.3);
 }
 
+.profile-info {
+    display: flex;
+    align-items: center;
+    column-gap: 2vw;
+}
+
+.profile-info button {
+    padding: 0.5vw;
+    border: 0.1vw solid black;
+    border-radius: 1vw;
+    background-color: white;
+    font-size: clamp(0rem, 0.6vw, 1000rem);
+    font-family: "Unbounded", "Arial";
+    font-weight: 500;
+    box-shadow: 0 0 0.3vw rgba(0, 0, 0, 0.2);
+    transition: all 0.15s;
+}
+
+.profile-info button:hover {
+    background-color: black;
+    color: white;
+}
+
+.profile-info button:active {
+    background-color: black;
+    color: white;
+    transform: scale(95%);
+}
+
+.profile-info h2,
 .username,
-article form button {
+.login button {
+    font-family: "Unbounded", "Arial";
+    font-size: clamp(0rem, 1.5vw, 1000rem);
+}
+
+.username,
+.login button {
     color: black;
     background-color: white;
-    font-family: "Unbounded", "Arial";
-    font-size: 1.5vw;
     font-style: italic;
     font-weight: 600;
     margin: 0;
@@ -43,7 +77,7 @@ article form button {
     box-shadow: inset 0.3vw 0.3vw 0.9vw rgba(0, 0, 0, 0.3);
 }
 
-article form button {
+.login button {
     box-shadow: 0 0 1vw rgba(0, 0, 0, 0.4);
     background-color: black;
     color: white;
@@ -51,10 +85,9 @@ article form button {
     transition: all 0.2s;
 }
 
-article form button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+.login button:hover {
+        background-color: rgba(0, 0, 0, 0.7);
 }
-
-article form button:active {
+.login button:active {
     transform: scale(95%);
 }
