--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>пароль успешно сброшен!</title>
-</head>
-<body>
-<h1>Ваш пароль успешно сброшен!</h1>
-<p>Теперь вы можете войти в систему</p>
-<a href="{% url 'shop:login' %}">Войти</a>
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block links %}
+  <link rel="stylesheet" href="/static/css/login-register.css">
+{% endblock %}
+
+{% block title %}
+  Пароль успешно сброшен
+{% endblock %}
+
+{% block main %}
+  <h2>Ваш пароль успешно сброшен!</h2>
+  <p>Теперь вы можете войти в систему</p>
+  <a class="submit" style="text-decoration: none" href="{% url 'shop:login' %}">Войти</a>
+{% endblock %}
