--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,26 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Сброс пароля</title>
-</head>
-<body>
-<h1>Сброс пароля</h1>
-{% if validlink %}
-    <form method="post">
-        {% csrf_token %}
-        <input type="password" name="new_password1" value="введите новый пароль"> sdfsdf
-        {% if form.new_password1.errors %}
-            {{ forn.new_password1.errors }}
-        {% endif %}
-        <input type="password" name="new_password2" value="подтвердите новый пароль">
-        {% if form.new_password2.errors %}
-            {{ form.new_password2.errors }}
-        {% endif %}
-        <input type="submit" value="Сменить пароль">
-    </form>
-{% else %}
-    <p>Ссылка для сброса пароля недействительна. Попробуйте еще раз </p>
-{% endif %}
-</body>
-</html>
+{% extends 'index.html' %}
+
+{% block links %}
+  <link rel="stylesheet" href="/static/css/login-register.css">
+{% endblock %}
+
+{% block title %}
+  Сброс пароля
+{% endblock %}
+
+{% block main %}
+  <article>
+    <h2>Сброс пароля</h2>
+    {% if validlink %}
+        <form method="post">
+            {% csrf_token %}
+            <input type="password" name="new_password1" value="введите новый пароль"> sdfsdf
+            {% if form.new_password1.errors %}
+                {{ forn.new_password1.errors }}
+            {% endif %}
+            <input type="password" name="new_password2" value="подтвердите новый пароль">
+            {% if form.new_password2.errors %}
+                {{ form.new_password2.errors }}
+            {% endif %}
+            <input class="submit" type="submit" value="Сменить пароль">
+        </form>
+    {% else %}
+        <p>Ссылка для сброса пароля недействительна. Попробуйте еще раз </p>
+    {% endif %}
+  </article>
+{% endblock %}
